# cpp-exercises

./: CMakeLists.txt  Makefile  README.md  listado.txt
src/: estructuras.h  main.cpp
src/api/: archivo.cpp  archivo.h
src/archivos/: pregunta2.cpp  pregunta2.h
src/cadena/: cadena.cpp
src/class/: cadena.h  numero.h
src/numero/: numero.cpp
